#SideBar, Breadcrumbs and Main Section #Homepage BreadCrumb Correctly redirects to / #SideBar Collapses

--- a/src/main/webapp/resources/css/main/style.css
+++ b/src/main/webapp/resources/css/main/style.css
@@ -6,6 +6,7 @@ Website: http://geekslabs.com/
 */
 
 /* Import fonts */
+/*noinspection CssUnknownTarget*/
 @import url(http://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
 @import url(line-icons.css);
 
@@ -1190,7 +1191,7 @@ div[data-role="editor-toolbar"] {
   position: relative;  
 }
 .panel.panel-default {  
-  border-radius: 0px;
+  border-radius: 0;
   
   border-top: 1px solid #d4d4d4;
   -webkit-box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.1);
@@ -1683,7 +1684,6 @@ div[data-role="editor-toolbar"] {
   cursor:move;
 }
 /*-----	map-----*/
-* Google maps */
 
 .gmap iframe{
 	width: 100%;
